--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <!-- Change Title and Meta tags-->
         <title>Superern | Ern Gregorio</title>
-        <base href="/superern.github.io/">
-        <meta name="description" content="">
+        <!-- <base href="/superern.github.io/"> -->
+        <meta name="description" content="Ern Gregorio, your full stack web developer">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Favicon -->
         <link rel="icon" href="assets/images/favicon.png">
@@ -30,7 +30,7 @@
                 <!-- Navbar -->
                 <nav class="navbar navbar-expand-lg navbar-sticky">
                     <div class="container">
-                        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="assets/images/vr-glass/logo.png" alt=""></a>
+                        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="assets/images/superern.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -39,10 +39,9 @@
                         <div class="collapse navbar-collapse" id="navbarCollapse">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#intro">Features</a></li>
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#about-product">About Product</a></li>
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#how-it-work">How it work</a></li>
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#faqs">Faq's</a></li>
+                                <li class="nav-item"><a class="nav-link" data-scroll href="#intro">Skills</a></li>
+                                <li class="nav-item"><a class="nav-link" data-scroll href="#about-product">About Me</a></li>
+                                <li class="nav-item"><a class="nav-link" data-scroll href="#faqs">Contacts</a></li>
                             </ul>
                         </div>
                     </div>
@@ -58,9 +57,9 @@
                         <div class="container">
                             <div class="row align-items-center">
                                 <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                                    <h1 class="text-capitalize strong mt-0 text-white">Enjoy Virtual-Reality glasses</h1>
-                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">Purchase Now</a>
-                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a>
+                                    <h1 class="text-capitalize strong mt-0 text-white">Ern Gregorio</h1>
+                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">Your Full-Stack Web Developer</a>
+                                    <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
                                 </div>
                             </div>
                         </div>
@@ -151,7 +150,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-lg-6 align-self-center wow zoomIn order-2 order-lg-1" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <h3>Why you choose</h3>
+                            <h3>Why choose me as your Web Developer?</h3>
                             <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
 
                             <div class="row list-style-1">
@@ -339,13 +338,13 @@
                     <div class="container">
                         <div class="row text-lg-left text-center text-dark-skin pt-3">
                             <div class="col-12 col-lg-6">
-                                <p>Copyright @ 2017 Zero Virtual Reality Glass. | All right reserved.</p>
+                                <p>Copyright @ 2019 Superern | All rights reserved.</p>
                             </div>
                             <div class="col-12 col-lg-6 text-center text-lg-right">
                                 <ul class="list-inline my-auto social">
-                                    <li class="list-inline-item pr-2"><a href="#" class="" title="facebook"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="#" class="" title="twitter"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="#" class="" title="dribbble"><i class="fa fa-dribbble"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://www.linkedin.com/in/eacgregorio/" class="" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://facebook.com/eagregorio" class="" title="facebook"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class="" title="dribbble"><i class="fa fa-dribbble"></i></a></li>
                                     <li class="list-inline-item pr-2"><a href="#" class="" title="pinterest"><i class="fa fa-pinterest-p"></i></a></li>
                                     <li class="pr-0 list-inline-item pr-0"><a href="#" class="" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
