--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div class="row align-items-center">
                                 <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
                                     <h1 class="text-capitalize strong mt-0 text-white">Ern Gregorio</h1>
-                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">Your Full-Stack Web Developer</a>
+                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-envelope"></i> Your Full-Stack Web Developer</a>
                                     <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
                                 </div>
                             </div>
