--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="container">
                     <div class="row pb-5">
                         <div class="col-12 text-center wow fadeInUp">
-                            <img src="assets/images/footer-logo.png" class="img-fluid" alt="">
+                            <img src="assets/images/avatar.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
