--- a/index.html
+++ b/index.html
@@ -342,11 +342,11 @@
                             </div>
                             <div class="col-12 col-lg-6 text-center text-lg-right">
                                 <ul class="list-inline my-auto social">
-                                    <li class="list-inline-item pr-2"><a href="https://www.linkedin.com/in/eacgregorio/" class="" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="https://facebook.com/eagregorio" class="" title="facebook"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class="" title="dribbble"><i class="fa fa-dribbble"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="#" class="" title="pinterest"><i class="fa fa-pinterest-p"></i></a></li>
-                                    <li class="pr-0 list-inline-item pr-0"><a href="#" class="" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://www.linkedin.com/in/eacgregorio/" class="" title="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://facebook.com/eagregorio" class="" title="facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class="" title="freelancer"><i class="fa fa-dribbble"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="#" class="" title="upwork" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
+                                    <li class="pr-0 list-inline-item pr-0"><a href="#" class="" title="fiverr" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
