--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                         <div class="container">
                             <div class="row align-items-center">
                                 <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                                    <h1 class="text-capitalize strong mt-0 text-white">Ern Gregorio</h1>
+                                    <h2 class="text-capitalize strong mt-0 text-white">Hi,  I'm</h2>
+                                    <h1 class="text-capitalize strong mt-0 text-white">Ern.</h1>
                                     <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-envelope"></i> Your Full-Stack Web Developer</a>
+                                    <p>Experience a super service with superern</p>
                                     <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
                                 </div>
                             </div>
@@ -139,7 +141,7 @@
                         <div class="col-12 col-lg-5 ml-auto align-self-center wow zoomIn text-white" data-wow-duration=".2s" data-wow-delay=".1s">
                             <h2>The Best One For You</h2>
                             <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium vivamus elementum nisi.</p>
-                            <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">Purchase Now</a>
+                            <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">I want your service now</a>
                         </div>
                     </div>
                 </div>
@@ -237,100 +239,12 @@
                 </div>
             </section>
             <!-- End Section Intro -->
-            <!-- Section FAQs -->
-            <section id="faqs" class="bg-light">
-                <div class="container">
-                    <div class="row pb-4">
-                        <div class="col-lg-8 mx-auto text-center">
-                            <h3>Frequently Asked Questions?</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 mx-auto wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                            <div class="accordion panel-group" id="faq">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <a data-toggle="collapse" data-parent="#faq" aria-expanded="true" href="#collapse2">In magna posuere eget, vestibulum tempor auctor?</a>
-                                    </div>
-                                    <div class="collapse show" id="collapse2" style="">
-                                        <div class="card-body border-top-0 py-4 px-4">
-                                            <p>Quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla.</p>
-
-                                            <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
-
-                                            <ul>
-                                                <li>Vestibulum ante ipsum primis in faucibus orci.</li>
-                                                <li>Luctus et ultrices posuere cubilia quis.</li>
-                                                <li>In ac dui quis mi consectetuer lacinia.</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header"> <a data-toggle="collapse" data-parent="#faq" aria-expanded="false" href="#collapse3" class="collapsed">Donec pede justo fringilla vel aliquet nec vulputate?</a></div>
-                                    <div class="collapse" id="collapse3">
-                                        <div class="card-body border-top-0 py-4 px-4">
-                                            <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla.</p>
-
-                                            <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header"><a data-toggle="collapse" data-parent="#faq" aria-expanded="false" href="#collapse4" class="collapsed">Aenean commodo ligula eget dolor aenean massa?</a></div>
-                                    <div class="collapse" id="collapse4">
-                                        <div class="card-body border-top-0 py-4 px-4 list-style-1">
-                                            <p>Quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
-
-                                            <ul class="list-unstyled">
-                                                <li>Vestibulum ante ipsum primis in faucibus orci.</li>
-                                                <li>Luctus et ultrices posuere cubilia quis.</li>
-                                                <li>In ac dui quis mi consectetuer lacinia.</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End FAQs -->
-            <!-- Section Newsletter -->
-            <section>
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-8 mx-auto wow fadeInUp text-center">
-                            <h3 class="mb-0">Subscribe to Newsletter</h3>
-                            <p>Stay up to date with our latest news and products.</p>
-                            <div class="row">
-                                <div class="col-md-10 col-lg-10 mx-auto">
-                                    <form action="mailchimp/process-subscribe.php" id="mc-form" method="post">
-                                        <div class="row">
-                                            <div class="col-12 col-lg-7 px-md-0 px-lg-2 text-center mx-auto">
-                                                <div class="form-group">
-                                                    <input type="text" name="mc_email" required="required" class="form-control" placeholder="Your eamil address...">
-                                                </div>
-                                            </div>
-                                            <div class="col-12 col-lg-5 px-md-0">
-                                                <input type="submit" name="mc_add" class="btn btn-warning btn-block" value="Subscribe Now!">
-                                            </div>
-                                        </div>
-                                        <div class="text-center" id="mc-result"></div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End Newsletter -->
             <!-- Footer -->
             <section class="footer bg-dark pb-3">
                 <div class="container">
                     <div class="row pb-5">
                         <div class="col-12 text-center wow fadeInUp">
-                            <img src="assets/images/avatar.png" class="img-fluid" alt=""> 
+                            <img src="assets/images/avatar.png" class="img-fluid" alt="Superern at your service" width="100"> 
                         </div>
                     </div>
                 </div>
