--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="Ern Gregorio, your full stack web developer">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Favicon -->
-        <link rel="icon" href="assets/images/favicon.png">
+        <link rel="icon" href="assets/images/superern.png">
         <!-- Plugins CSS -->
         <link rel="stylesheet" href="assets/plugins/dist/css/plugins.min.css" />
         <!-- Main Template CSS -->
@@ -24,33 +24,11 @@
         <div id="preloader"></div>
         <!-- Loader End-->
         <!-- Main Wrap -->
-        <div class="wrap">
+        <div class="wrap h-100">
             <!-- Header -->
-            <header class="header">
-                <!-- Navbar -->
-                <nav class="navbar navbar-expand-lg navbar-sticky">
-                    <div class="container">
-                        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="assets/images/superern.png" alt=""></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span> 
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarCollapse">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#intro">Skills</a></li>
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#about-product">About Me</a></li>
-                                <li class="nav-item"><a class="nav-link" data-scroll href="#faqs">Contacts</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-                <!-- End Navbar -->
-            </header>
             <!-- End Header -->
             <!-- Section main banner -->
-            <section id="home" class="parallax-fixed main-banner" data-stellar-background-ratio="0.5" style="background-position: 0% 0px;">
+            <section id="home" class="parallax-fixed main-banner h-100" data-stellar-background-ratio="0.5" style="background-position: 0% 0px;">
                 <div id="particles-js"></div>
                 <div class="content-table">
                     <div class="content-middle">
@@ -59,8 +37,8 @@
                                 <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
                                     <h2 class="text-capitalize strong mt-0 text-white">Hi,  I'm</h2>
                                     <h1 class="text-capitalize strong mt-0 text-white">Ern.</h1>
-                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-envelope"></i> Your Full-Stack Web Developer</a>
-                                    <p>Experience a super service with superern</p>
+                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-envelope"></i> Your SUPERB Web Developer</a>
+                                    <p>Experience a superb web development with superern</p>
                                     <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
                                 </div>
                             </div>
@@ -70,197 +48,25 @@
                 </div>
             </section>
             <!-- End Section main banner -->
-            <!-- Section Intro -->
-            <div id="intro">
-                <div class="container item">
-                    <div class="row">
-                        <div class="col-12 text-center py-5 py-md-0">
-                            <img src="assets/images/vr-glass/img-1.png" class="img-fluid floating" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End App Partners -->
-            <!-- Section Features -->
-            <section id="how-to-use" class="pt-0">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4 col-lg-4 text-center wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <div class="icon-block mb-md-5 mb-sm-4 px-2">
-                                <img src="assets/images/vr-glass/icon/360-degrees.svg" alt="" style="height:70px; width:70px">
-                                <h6 class="font-weight-bold">Awesome Experience</h6>
-                                <p>Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-4 text-center wow zoomIn" data-wow-duration=".3s" data-wow-delay=".2s">
-                            <div class="icon-block mb-md-5 mb-sm-4 px-2">
-                                <img src="assets/images/vr-glass/icon/game-console.svg" alt="" style="height:70px; width:70px">
-                                <h6 class="font-weight-bold">Perfect UI Design</h6>
-                                <p>Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-4 text-center wow zoomIn" data-wow-duration=".4s" data-wow-delay=".3s">
-                            <div class="icon-block mb-md-5 mb-sm-4 px-2">
-                                <img src="assets/images/vr-glass/icon/smartphone.svg" alt="" style="height:70px; width:70px">
-                                <h6 class="font-weight-bold">East to Connect</h6>
-                                <p>Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-4 text-center wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <div class="icon-block mb-md-5 mb-sm-4 px-2">
-                                <img src="assets/images/vr-glass/icon/tap.svg" alt="" style="height:70px; width:70px">
-                                <h6 class="font-weight-bold">Fast and Simple</h6>
-                                <p>Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-4 text-center wow zoomIn" data-wow-duration=".3s" data-wow-delay=".2s">
-                            <div class="icon-block mb-md-5 mb-sm-4 px-2">
-                                <img src="assets/images/vr-glass/icon/vr-glasses.svg" alt="" style="height:70px; width:70px">
-                                <h6 class="font-weight-bold">Amazing Compatibility</h6>
-                                <p>Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-4 text-center wow zoomIn" data-wow-duration=".4s" data-wow-delay=".3s">
-                            <div class="icon-block mb-md-5 mb-sm-4 px-2">
-                                <img src="assets/images/vr-glass/icon/vr-glasses-1.svg" alt="" style="height:70px; width:70px">
-                                <h6 class="font-weight-bold">Virtual Reality</h6>
-                                <p>Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End Section Features -->
-            <!-- Section About -->
-            <section id="about-product" class="bg-1">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-lg-6">
-                            <img src="assets/images/vr-glass/vr-box.png" class="img-fluid floating" alt="">
-                        </div>
-                        <div class="col-12 col-lg-5 ml-auto align-self-center wow zoomIn text-white" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <h2>The Best One For You</h2>
-                            <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium vivamus elementum nisi.</p>
-                            <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">I want your service now</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End Section About -->
-            <!-- Section Why Choose -->
-            <section id="why-choose">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-6 align-self-center wow zoomIn order-2 order-lg-1" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <h3>Why choose me as your Web Developer?</h3>
-                            <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
 
-                            <div class="row list-style-1">
-                                <div class="col-12">
-                                    <ul class="list-unstyled">
-                                        <li>Nulla consequat massa quis enim.</li>
-                                        <li>Donec pede justo, fringilla</li>
-                                        <li>In enim justo, rhoncus ut</li>
-                                        <li>Aenean leo ligula porttitor</li>
-                                        <li>Phasellus viverra nulla</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12 col-lg-5 ml-auto wow fadeInUp order-1 order-lg-2" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <img src="assets/images/vr-glass/img-2.png" class="img-fluid floating" alt="">
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End Section why choose -->
-            <!-- Section How it work -->
-            <section id="how-it-work" class="how-it-work bg-sky">
-                <div class="container">
-                    <div class="row text-center">
-                        <div class="col-md-10 col-lg-8 mx-auto">
-                            <h3>How It Work</h3>
-                            <p>Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc mi a libero.</p>
-                        </div>
-                    </div>
-                    <div class="row pt-3">
-                        <div class="col-md-4 work-steps wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <div class="content">
-                                <img src="assets/images/vr-glass/icon/quill.svg" alt="" style="height:70px; width:70px">
-                                <h4 class="font-weight-bold">Sign up now</h4>
-                                <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 work-steps wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <div class="content">
-                                <img src="assets/images/vr-glass/icon/chat.svg" alt="" style="height:70px; width:70px">
-                                <h4 class="font-weight-bold">Buy product</h4>
-                                <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 work-steps wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <div class="content">
-                                <img src="assets/images/vr-glass/icon/virtual-reality.svg" alt="" style="height:70px; width:70px">
-                                <h4 class="font-weight-bold">Enjoy with product</h4>
-                                <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End Section Facts -->
-            <!-- Section Intro -->
-            <section>
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-12 col-lg-5 wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                            <img class="img-fluid" src="assets/images/vr-glass/img-3.png" alt=""/>
-                        </div>
-                        <div class="col-lg-6 ml-auto wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                            <h3 class="text-capitalize">User Friendly Interface, Very Easy to Use</h3>
-                            <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End Section Intro -->
-            <!-- Section Intro -->
-            <section class="pt-0">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6 wow zoomIn order-2 order-lg-1" data-wow-duration=".5s" data-wow-delay=".2s">
-                            <h3 class="text-capitalize">User Friendly Interface,<br>Very Easy to Use</h3>
-                            <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
-                        </div>
-                        <div class="col-lg-5 ml-auto wow zoomIn order-1 order-lg-2" data-wow-duration=".5s" data-wow-delay=".2s">
-                            <img class="img-fluid" src="assets/images/vr-glass/img-4.png" alt=""/>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End Section Intro -->
             <!-- Footer -->
-            <section class="footer bg-dark pb-3">
-                <div class="container">
-                    <div class="row pb-5">
-                        <div class="col-12 text-center wow fadeInUp">
-                            <img src="assets/images/avatar.png" class="img-fluid" alt="Superern at your service" width="100"> 
-                        </div>
-                    </div>
-                </div>
+            <section class="footer bg-dark p-0">
                 <div class="copyright">
                     <div class="container">
                         <div class="row text-lg-left text-center text-dark-skin pt-3">
-                            <div class="col-12 col-lg-6">
-                                <p>Copyright @ 2019 Superern | All rights reserved.</p>
+                            <div class="col-12 col-lg-4">
+                                <p>Copyright <i class="fa fa-copyright"></i> 2020 Superern | All rights reserved.</p>
                             </div>
-                            <div class="col-12 col-lg-6 text-center text-lg-right">
+                            <div class="col-12 col-lg-4 text-center text-lg-center">
+                                <img src="assets/images/superern.png" class="img-fluid" alt="Superern at your service" width="50">
+                            </div>
+                            <div class="col-12 col-lg-4 text-center text-lg-right">
                                 <ul class="list-inline my-auto social">
                                     <li class="list-inline-item pr-2"><a href="https://www.linkedin.com/in/eacgregorio/" class="" title="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="https://facebook.com/eagregorio" class="" title="facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class="" title="freelancer"><i class="fa fa-dribbble"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="#" class="" title="upwork" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
-                                    <li class="pr-0 list-inline-item pr-0"><a href="#" class="" title="fiverr" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://twitter.com/superern14" class="" title="facebook" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class="" title="freelancer"><i class="fa fa-paper-plane"></i></a></li>
+                                    <li class="list-inline-item pr-2"><a href="https://github.com/superern" class="" title="upwork" target="_blank"><i class="fa fa-github"></i></a></li>
+                                    <li class="pr-0 list-inline-item pr-0"><a href="https://www.fiverr.com/superern" class="" title="fiverr" target="_blank"><i class="fa fa-globe"></i></a></li>
                                 </ul>
                             </div>
                         </div>
